# aleo-tools

./: .gitignore  .gitmodules  README.md
authorize-credits/: Cargo.toml
authorize-credits/src/: lib.rs
authorize-service/: Cargo.toml
authorize-service/benches/: benchmarks.rs
authorize-service/src/: authorize.rs  keygen.rs  lib.rs  main.rs  request.rs  response.rs  routes.rs  utils.rs
execute-service/: Cargo.toml
execute-service/src/: execute.rs  lib.rs  main.rs  query.rs  request.rs  routes.rs
scripts/: local-devnet.sh
transfer-client/: Cargo.toml
transfer-client/src/: main.rs
