[package]
name = "authorize-credits"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.72"

[dependencies.credits]
version = "0.1.3"

[dependencies.indexmap]
version = "2.0.2"

[dependencies.rand]
version = "0.8"

[dependencies.snarkvm]
version = "0.16.1"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true


